dev.thihup.jvisualg.examples/src/main/resources/dev/thihup/jvisualg/examples/errors/notfound/type/type.alg
algoritmo "erro tipo nao existe"

var
    x: inexistente
inicio

fimalgoritmo
